[package]
name = "gsxtract-cli"
version = "0.1.0"
authors = ["KirmesBude <kirmesbude@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gsxtract = { path = "../gsxtract" }
texture_packer = "0.21.1"
image = "0.23.8"
clap = "2.33.3"