[package]
name = "gsxtract-cli"
version = "0.1.0"
authors = ["KirmesBude <kirmesbude@gmail.com>"]
description = "Extracts all kinds of data from the ROMs of both GBA Golden Sun titles"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gsxtract = { path = "../gsxtract" }
texture_packer = "0.27"
image = "0.24"
clap = { version = "4.4", features = ["derive"] }
simplelog = "0.12"